_sass/components/feature-bubbles-aside.scss
.feature-bubbles-aside {

	background-color: $hs-blue-grey-900;
	background-image: url(#{$cdnurl}/img/coffee-background.jpg);
	background-size: cover;
	background-position: center;
	position: relative;
	&:before {
		content: ''	;
		background-color: $hs-blue-grey-900;
		display: block;
		width: 100%;
		height: 100%;
		position: absolute;
		opacity: 0.9;
	}

	@include flex-center;
	padding: 96px 32px;
	text-align: center;

	> div {
		@include flex-center;
		max-width: $fixed-column-width;	
	}

	.phone {
		flex-shrink: 0;
		z-index: 1;
		img { 
			height: 350px;
			@media #{$gt-sm} {
				height: 500px;
			}
		}
	}

	.features {

		color: white;

		> h2 {
			@extend .mdl-typography--display-1;
			color: $hs-blue-grey-50;
		}

		> p {
			color: $hs-blue-grey-200;
			font-size: 16px;
		}

		> ul	{
			list-style-type: none;
			padding-left: 0;
			margin-top: 48px;
		}

		> ul li {

			position: relative;
			padding: 24px 0;

			// Icon
			p:first-child {
				margin-bottom: 0;
				i {
					font-size: 72px;
					color: $hs-white-five;
				}
			}

			// Title
			h3 {
				@extend .mdl-typography--headline;
				color: $hs-white-one;
			}

			// Text
			p:last-child {
				color: $hs-white-three;
			}
		}
	}

	// Link
	a {
		@extend .mdl-button;
		@extend .mdl-button--primary;
	}

	@media (min-width: 840px) {

		text-align: left;

		> div {
			margin-bottom: 72px;
			@include flex-center(row);
		}

		.features {

			margin-left: 48px;

			> h2 {
				margin-bottom: 0.25em;
			}

			> ul li {

				padding: 0;
				padding-left: 64px;

				h3 {
					margin-bottom: 0.25em;
				}

				// Icon
				p:first-child {
					position: absolute;
					top: 0;
					left: 0;
					i {
						font-size: 48px;
					}
				}
			}
		}
	}
}

